update to my name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
       <img src="images/oldbarn.jpg" alt="old barn with red car" class="profile-image">
-      <h1 class="tag name">Hello, I’m Iris.</h1>
+      <h1 class="tag name">Hello, I’m Iris H.</h1>
       <p class="tag location">My home is Port Alberni, British Columbia.</p>
     </header>
 
