changed all div to nav & section
made changes on all three pages

--- a/experience.html
+++ b/experience.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Iris Heidebrecht</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/oldbarn.jpg" alt="old barn with red car" class="profile-image">
@@ -23,10 +23,10 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section>
         <h2>Experience</h2>
         <p>I have had a lot of work experience in the health care administration side of things. I got to learn new software programs that taught me how to problem solve on the fly. My first career was working as a hairdresser. What a rewarding job that gave me a chance to work with people. I learned how important it is to listen and understand what someone is trying to communicate. Developing people skills were essential for the return customer clientele.</p>
-      </div>
+      </section>
 
     </main>
     <footer>
