--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </header>
 
     <main class="flex">
-      <section class="card">
+      <section>
         <h2>Background</h2>
         <p>I'm living in a small town called Port Alberni, Vancouver Island, where I grow up. I moved away from Port and lived in Calgary, AB for several years: where I took a Hospital Unit Clerk course.</p>
         <p>For the past 15 years, I worked in the health care field as a Hospital Unit Clerk. I had a lot of great experiences as a unit clerk, but life has a way of changing the course of your path.</p>
         <p>So now I have to embark on a new career path as a Web designer and developer.</p>
       </section>
 
-      <section class="card">
+      <section>
         <h2>Goals</h2>
         <p>While I invest in myself and this new career, I'm looking forward to building new networks in the web tech industry and put my whole heart into designing great web pages. I hope to create pages for people which will have a positive impact on their lives</p>
         <ul class="skills">
