--- a/hobbies.html
+++ b/hobbies.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Iris Heidebrecht</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/oldbarn.jpg" alt="old barn with red car" class="profile-image">
@@ -23,7 +23,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section>
       <h2>I like to do a collection of different types of hobbies.</h2>
         <h3> Competitive</h3>
         <ul>
@@ -44,7 +44,7 @@
           <li>Nature</li>
         </ul>
           <img src="images/beehive.jpg" alt="beehive hanging of a tree branch">
-      </div>
+      </section>
 
     </main>
     <footer>
